--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
       <!-- Logo -->
       <div class="login-logo">
-        <div class="login-logo-text">DIGITAL <span>CREDIT</span></div>
+        <img src="assets/logo.png" alt="Digital Credit" style="max-height: 50px; margin-bottom: 8px;">
         <div class="login-logo-sub">CRM — Noleggio a Lungo Termine</div>
       </div>
       
