--- a/dashboard.html
+++ b/dashboard.html
@@ -15,8 +15,8 @@
     
     <!-- SIDEBAR -->
     <aside class="sidebar">
-      <div class="sidebar-logo">
-        <div class="sidebar-logo-text">DIGITAL <span>CREDIT</span></div>
+     <div class="sidebar-logo">
+        <img src="assets/logo.png" alt="Digital Credit" style="max-height: 36px;">
       </div>
       
       <div class="sidebar-section-title">Menu Principale</div>
