--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
     <!-- SIDEBAR -->
     <aside class="sidebar">
      <div class="sidebar-logo">
-        <img src="assets/logo.png" alt="Digital Credit" style="max-height: 36px;">
+       <img src="assets/logo.png" alt="Digital Credit" style="max-width: 180px; width: 100%;">
       </div>
       
       <div class="sidebar-section-title">Menu Principale</div>
