--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
     <!-- SIDEBAR -->
     <aside class="sidebar">
      <div class="sidebar-logo">
-       <img src="assets/logo.png" alt="Digital Credit" style="width: 200px; border-radius: 8px; padding: 8px; background: white;">
+       <img src="assets/logo.png" alt="Digital Credit" style="width: 100%; padding: 10px; background: white; border-radius: 8px;">
       </div>
       
       <div class="sidebar-section-title">Menu Principale</div>
