Enhance sidebar logo appearance
Updated logo image styling in the sidebar.

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
     <!-- ========== SIDEBAR ========== -->
     <aside class="sidebar" id="sidebar">
       <div class="sidebar-logo">
-        <img src="assets/logo.png" alt="Digital Credit" height="40" onerror="this.style.display='none';this.nextElementSibling.style.display='block';">
+        <img src="assets/logo.png" alt="Digital Credit" style="height: 120px; width: auto; padding: 10px; background: white; border-radius: 8px;">
         <span class="sidebar-logo-text" style="display:none;color:#fff;font-size:1.25rem;font-weight:700;">DIGITAL<span style="color:var(--brand-primary);"> CREDIT</span></span>
       </div>
 
