Enhance lead management with selection and deletion features
Added buttons for selection and deletion of leads, along with a confirmation modal for deletion.

--- a/lead-kanban.html
+++ b/lead-kanban.html
@@ -115,10 +115,32 @@
         </div>
 
         <div class="toolbar-right">
+          <!-- Bottone Seleziona -->
+          <button class="btn btn-secondary" id="btn-modalita-selezione">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 11 12 14 22 4"/><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"/></svg>
+            Seleziona
+          </button>
+
           <button class="btn btn-primary" id="btn-nuovo-lead">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
             Nuovo Lead
           </button>
+        </div>
+      </div>
+
+      <!-- Barra selezione multipla (nascosta di default) -->
+      <div class="barra-selezione" id="barra-selezione" style="display:none;">
+        <div class="barra-selezione-left">
+          <span id="selezione-conteggio">Nessun lead selezionato</span>
+        </div>
+        <div class="barra-selezione-right">
+          <button class="btn btn-secondary btn-sm" id="btn-seleziona-tutti">Seleziona tutti</button>
+          <button class="btn btn-secondary btn-sm" id="btn-deseleziona-tutti">Deseleziona tutti</button>
+          <button class="btn btn-danger btn-sm" id="btn-elimina-selezionati" disabled>
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 6 5 6 21 6"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/></svg>
+            Elimina selezionati
+          </button>
+          <button class="btn btn-secondary btn-sm" id="btn-annulla-selezione">Annulla</button>
         </div>
       </div>
 
@@ -196,6 +218,31 @@
         <button class="btn btn-primary" id="btn-salva-lead">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"/></svg>
           Salva Lead
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- MODALE CONFERMA ELIMINAZIONE -->
+  <div class="modal-overlay" id="modal-conferma-elimina" style="display:none;">
+    <div class="modal modal-sm">
+      <div class="modal-header">
+        <h2 class="modal-title" style="color:#EF4444;">
+          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align: -4px; margin-right: 6px;"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"/><line x1="12" y1="9" x2="12" y2="13"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
+          Conferma eliminazione
+        </h2>
+        <button class="btn-icon modal-close" id="btn-chiudi-elimina" onclick="chiudiModaleConfermaElimina()">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p id="elimina-testo-conferma" style="margin:0; line-height:1.6;"></p>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" id="btn-annulla-elimina">Annulla</button>
+        <button class="btn btn-danger" id="btn-conferma-elimina">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 6 5 6 21 6"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/></svg>
+          Elimina
         </button>
       </div>
     </div>
