--- a/dashboard.html
+++ b/dashboard.html
@@ -160,17 +160,31 @@
         <!-- ===== RIGA 2 — DUE COLONNE ===== -->
         <div class="two-columns">
 
-          <!-- COLONNA SINISTRA — Clienti Recenti -->
-          <div class="card">
-            <div class="section-header">
-              <svg class="section-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
-              <h2 class="section-title">Clienti Recenti</h2>
+         <!-- COLONNA SINISTRA — Clienti Recenti + Risposte BO -->
+          <div>
+            <!-- Card Clienti Recenti (ridotta) -->
+            <div class="card" style="margin-bottom: var(--space-4);">
+              <div class="section-header">
+                <svg class="section-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
+                <h2 class="section-title">Clienti Recenti</h2>
+              </div>
+              <div class="client-list" id="lista-clienti-recenti">
+                <div class="client-list-item skeleton-row"><div class="skeleton" style="width:60%;height:16px;border-radius:4px;">&nbsp;</div></div>
+                <div class="client-list-item skeleton-row"><div class="skeleton" style="width:50%;height:16px;border-radius:4px;">&nbsp;</div></div>
+                <div class="client-list-item skeleton-row"><div class="skeleton" style="width:55%;height:16px;border-radius:4px;">&nbsp;</div></div>
+              </div>
             </div>
-            <div class="client-list" id="lista-clienti-recenti">
-              <!-- Skeleton loading -->
-              <div class="client-list-item skeleton-row"><div class="skeleton" style="width:60%;height:16px;border-radius:4px;">&nbsp;</div></div>
-              <div class="client-list-item skeleton-row"><div class="skeleton" style="width:50%;height:16px;border-radius:4px;">&nbsp;</div></div>
-              <div class="client-list-item skeleton-row"><div class="skeleton" style="width:55%;height:16px;border-radius:4px;">&nbsp;</div></div>
+
+            <!-- Card Risposte Back Office -->
+            <div class="card" id="card-risposte-bo">
+              <div class="section-header">
+                <svg class="section-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"/><polyline points="14 2 14 8 20 8"/><path d="M9 14l2 2 4-4"/></svg>
+                <h2 class="section-title">Risposte Back Office</h2>
+                <span class="badge-notification" id="badge-risposte-bo" style="display:none;">0</span>
+              </div>
+              <div id="lista-risposte-bo">
+                <div class="skeleton-row"><div class="skeleton" style="width:65%;height:14px;border-radius:4px;">&nbsp;</div></div>
+              </div>
             </div>
           </div>
 
