--- a/impostazioni.html
+++ b/impostazioni.html
@@ -400,6 +400,15 @@
               <option value="manuale">Manuale</option>
             </select>
           </div>
+          <div class="form-group">
+            <label class="form-label">Tipo Integrazione *</label>
+            <select class="form-input form-select" id="campagna-integrazione" required>
+              <option value="">— Seleziona tipo —</option>
+              <option value="make">Make (Integromat)</option>
+              <option value="zapier">Zapier</option>
+              <option value="webhook">Webhook generico</option>
+            </select>
+          </div>
         </form>
       </div>
       <div class="modal-footer">
