--- a/lead-dettaglio.html
+++ b/lead-dettaglio.html
@@ -159,6 +159,7 @@
                       <option value="tiktok">TikTok</option>
                       <option value="landing">Landing Page</option>
                       <option value="manuale">Manuale</option>
+                      <option value="database">Database</option>
                     </select>
                   </div>
                 </div>
