--- a/dashboard.html
+++ b/dashboard.html
@@ -143,7 +143,7 @@
             </div>
           </div>
 
-          <!-- Widget 4: Lead Nuovi -->
+          <!-- Widget 4: Lead Nuovi / Richieste BO (per backoffice) -->
           <div class="card card-widget" id="widget-lead-nuovi" style="cursor:pointer;">
             <div class="card-widget-icon yellow">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="16"/><line x1="8" y1="12" x2="16" y2="12"/></svg>
@@ -152,7 +152,7 @@
               <div class="card-widget-number" id="num-lead-nuovi">
                 <span class="skeleton skeleton-number">&nbsp;</span>
               </div>
-              <div class="card-widget-label">Lead Nuovi</div>
+              <div class="card-widget-label" id="label-lead-nuovi">Lead Nuovi</div>
             </div>
           </div>
         </div>
@@ -160,7 +160,7 @@
         <!-- ===== RIGA 2 — DUE COLONNE ===== -->
         <div class="two-columns">
 
-         <!-- COLONNA SINISTRA — Clienti Recenti + Risposte BO -->
+         <!-- COLONNA SINISTRA — Clienti Recenti + Risposte/Richieste BO -->
           <div>
             <!-- Card Clienti Recenti (ridotta) -->
             <div class="card" style="margin-bottom: var(--space-4);">
@@ -175,11 +175,11 @@
               </div>
             </div>
 
-            <!-- Card Risposte Back Office -->
+            <!-- Card Risposte/Richieste Back Office -->
             <div class="card" id="card-risposte-bo">
               <div class="section-header">
                 <svg class="section-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.5 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7.5L14.5 2z"/><polyline points="14 2 14 8 20 8"/><path d="M9 14l2 2 4-4"/></svg>
-                <h2 class="section-title">Risposte Back Office</h2>
+                <h2 class="section-title" id="titolo-sezione-bo">Risposte Back Office</h2>
                 <span class="badge-notification" id="badge-risposte-bo" style="display:none;">0</span>
               </div>
               <div id="lista-risposte-bo">
