--- a/dashboard.html
+++ b/dashboard.html
@@ -186,6 +186,18 @@
                 <div class="skeleton-row"><div class="skeleton" style="width:65%;height:14px;border-radius:4px;">&nbsp;</div></div>
               </div>
             </div>
+
+            <!-- Card Richieste BO (solo Admin) -->
+            <div class="card" id="card-richieste-bo-admin" style="display:none; margin-top: var(--space-4);">
+              <div class="section-header">
+                <svg class="section-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"/><rect x="8" y="2" width="8" height="4" rx="1" ry="1"/></svg>
+                <h2 class="section-title">Richieste Back Office</h2>
+                <span class="badge-notification" id="badge-richieste-bo-admin" style="display:none;">0</span>
+              </div>
+              <div id="lista-richieste-bo-admin">
+                <div class="skeleton-row"><div class="skeleton" style="width:65%;height:14px;border-radius:4px;">&nbsp;</div></div>
+              </div>
+            </div>
           </div>
 
           <!-- COLONNA DESTRA -->
