--- a/dashboard.html
+++ b/dashboard.html
@@ -233,6 +233,25 @@
 
   </div>
 
+  <!-- POPUP COMUNICAZIONI NON LETTE -->
+  <div class="modal-overlay" id="popup-comunicazioni" style="display:none;">
+    <div class="modal">
+      <div class="modal-header">
+        <h2 class="modal-title">Comunicazioni non lette</h2>
+        <button class="btn-icon modal-close" onclick="chiudiPopupComunicazioni()">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="popup-comunicazioni-lista"></div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" onclick="chiudiPopupComunicazioni()">Chiudi</button>
+        <a href="comunicazioni.html" class="btn btn-primary">Vai alle Comunicazioni</a>
+      </div>
+    </div>
+  </div>
+
   <!-- Toast notifica -->
   <div id="toast-container" class="toast-container"></div>
 
