--- a/lead-elenco.html
+++ b/lead-elenco.html
@@ -7,6 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <!-- SheetJS per export Excel -->
+  <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
 </head>
 <body>
   <div class="app-container">
@@ -124,6 +126,15 @@
         </div>
 
         <div class="toolbar-right">
+          <!-- Bottone Esporta Excel -->
+          <button class="btn btn-secondary" id="btn-esporta-excel" title="Esporta lead in Excel">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+              <polyline points="7 10 12 15 17 10"/>
+              <line x1="12" y1="15" x2="12" y2="3"/>
+            </svg>
+            Esporta Excel
+          </button>
           <button class="btn btn-primary" id="btn-nuovo-lead" onclick="apriModaleNuovoLead()">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
             Nuovo Lead
@@ -266,6 +277,26 @@
   <!-- Toast notifiche -->
   <div class="toast-container" id="toast-container"></div>
 
+  <!-- Overlay export Excel -->
+  <div id="export-overlay" class="export-overlay" style="display:none;">
+    <div class="export-overlay-content">
+      <div class="export-spinner"></div>
+      <p>Generazione export in corso...</p>
+    </div>
+  </div>
+
+  <!-- Modale conferma export massivo -->
+  <div id="modal-export-conferma" class="modal-overlay" style="display:none;">
+    <div class="modal-content" style="max-width:420px;">
+      <h3 style="margin-bottom:12px;">⚠️ Export massivo</h3>
+      <p id="export-conferma-testo" style="margin-bottom:20px;color:var(--text-secondary);"></p>
+      <div style="display:flex;gap:8px;justify-content:flex-end;">
+        <button class="btn btn-secondary" onclick="chiudiModaleExport()">Annulla</button>
+        <button class="btn btn-primary" onclick="confermaExport()">Continua</button>
+      </div>
+    </div>
+  </div>
+
   <!-- Firebase CDN -->
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -282,6 +313,7 @@
       proteggPagina(['admin', 'consulente', 'backoffice']);
       inizializzaSidebar();
       inizializzaElencoLead();
+      inizializzaExportExcel();
     });
   </script>
 </body>
